feature/GEINFRA-122: Added optional create properties
